partiql/tests/snapshots/pretty__graph_quantifiers_3.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT a,b FROM (g MATCH (a:A)~[:edge]~{5,}(b:B))
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT a, b FROM (g MATCH (a:A) ~[:edge]~{5,} (b:B))

------------------------------------------------------------------------------------------------------------------------
SELECT a, b FROM (g MATCH (a:A) ~[:edge]~{5,} (b:B))

--------------------------------------------------------------------------------
SELECT a, b FROM (g MATCH (a:A) ~[:edge]~{5,} (b:B))

----------------------------------------
SELECT a, b
FROM (g MATCH (a:A) ~[:edge]~{5,} (b:B))

------------------------------
SELECT a, b
FROM (g MATCH (a:A) ~[:edge]~{5,} (b:B))

--------------------
SELECT a, b
FROM (g MATCH (a:A) ~[:edge]~{5,} (b:B))

----------
SELECT a,
  b
FROM (g MATCH (a:A) ~[:edge]~{5,} (b:B))
