partiql/tests/snapshots/pretty__graph_quantifiers_4.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT a,b FROM (g MATCH (a:A)-[e:edge]-{2,6}(b:B))
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT a, b FROM (g MATCH (a:A) -[e:edge]-{2,6} (b:B))

------------------------------------------------------------------------------------------------------------------------
SELECT a, b FROM (g MATCH (a:A) -[e:edge]-{2,6} (b:B))

--------------------------------------------------------------------------------
SELECT a, b FROM (g MATCH (a:A) -[e:edge]-{2,6} (b:B))

----------------------------------------
SELECT a, b
FROM (g MATCH (a:A) -[e:edge]-{2,6} (b:B))

------------------------------
SELECT a, b
FROM (g MATCH (a:A) -[e:edge]-{2,6} (b:B))

--------------------
SELECT a, b
FROM (g MATCH (a:A) -[e:edge]-{2,6} (b:B))

----------
SELECT a,
  b
FROM (g MATCH (a:A) -[e:edge]-{2,6} (b:B))
