partiql/tests/snapshots/pretty__graph_quantifiers_7.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT a,b FROM (g MATCH (a:A)~{5,}(b:B))
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT a, b FROM (g MATCH (a:A) ~{5,} (b:B))

------------------------------------------------------------------------------------------------------------------------
SELECT a, b FROM (g MATCH (a:A) ~{5,} (b:B))

--------------------------------------------------------------------------------
SELECT a, b FROM (g MATCH (a:A) ~{5,} (b:B))

----------------------------------------
SELECT a, b
FROM (g MATCH (a:A) ~{5,} (b:B))

------------------------------
SELECT a, b
FROM (g MATCH (a:A) ~{5,} (b:B))

--------------------
SELECT a, b
FROM (g MATCH (a:A) ~{5,} (b:B))

----------
SELECT a,
  b
FROM (g MATCH (a:A) ~{5,} (b:B))
