partiql/tests/snapshots/pretty__graph_search_prefix_2.snap
---
source: partiql/tests/pretty.rs
expression: doc
---
========================================================================================================================================================================================================
SELECT p FROM (g MATCH p = ALL SHORTEST (a WHERE a.owner='Dave') -[t:Transfer]-> * (b WHERE b.owner='Aretha'))
========================================================================================================================================================================================================

------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
SELECT p FROM (g MATCH p = ALL SHORTEST (a WHERE (a.owner = 'Dave')) -[t:Transfer]->* (b WHERE (b.owner = 'Aretha')))

------------------------------------------------------------------------------------------------------------------------
SELECT p FROM (g MATCH p = ALL SHORTEST (a WHERE (a.owner = 'Dave')) -[t:Transfer]->* (b WHERE (b.owner = 'Aretha')))

--------------------------------------------------------------------------------
SELECT p
FROM (g MATCH p = ALL SHORTEST (a WHERE (a.owner = 'Dave')) -[t:Transfer]->* (b WHERE (b.owner = 'Aretha')))

----------------------------------------
SELECT p
FROM (g MATCH p = ALL SHORTEST (a WHERE (a.owner = 'Dave')) -[t:Transfer]->* (b WHERE (b.owner = 'Aretha')))

------------------------------
SELECT p
FROM (g MATCH p = ALL SHORTEST (a WHERE (a.owner = 'Dave')) -[t:Transfer]->* (b WHERE (b.owner = 'Aretha')))

--------------------
SELECT p
FROM (g MATCH p = ALL SHORTEST (a WHERE (a.owner = 'Dave')) -[t:Transfer]->* (b WHERE (b.owner = 'Aretha')))

----------
SELECT p
FROM (g MATCH p = ALL SHORTEST (a WHERE (a.owner = 'Dave')) -[t:Transfer]->* (b WHERE (b.owner = 'Aretha')))
